@@ -34,6 +34,7 @@ Version 0.2.beta2
 - Fixed: Line breaks in teaser did not work (Ticket #198)
 - Fixed: tl_iso_addressbook.email is no longer mandatory (Ticket #174)
 - Fixed: Removed redirect page from address book module setting (Ticket #174)
+- Fixed: IsotopeProduct no longer shows attributes not available in product type
 
 Version 0.2.beta1 (2010-08-25)
 ------------------------------
